[metadata]
name = project
version = 0.0.1
author = author
author_email = author@gmail.com
description = Template for python project with source directory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/author/project
project_urls =
    Bug Tracker = https://github.com/author/project/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python
keywords = 
    empty
    project
    template

[options]
package_dir =
    = source
packages = find:
install_requires =

#python_requires = >=3.6

[options.packages.find]
where=source
