[metadata]
name = surflink
version = 0.0.1
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Extracts links/urls from html markup with ability to choose which urls to be extracted.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/surflink
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/surflink/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: XML
    Topic :: Utilities
keywords = 
    extract
    webpage
    html
    link
    url

[options]
package_dir =
    = source
packages = find:
install_requires =
    bs4
    resid<1.0.0
python_requires = >=3.6

[options.packages.find]
where=source
